lower content layout bug

--- a/AccountingSys/Styles/admin_employee.css
+++ b/AccountingSys/Styles/admin_employee.css
@@ -1014,6 +1014,7 @@ legend {
 
 .lower-maincontent {
   display: flex;
+  flex-direction: column;
   height: auto;
   width: 100%;
   border: solid darkgreen 3px;
